Move oauth vignette out of articles.
Closes #398.

I'm not sure if there's something not-CRAN-safe that prevents this from being here, but it seems to work locally at least.

--- a/vignettes/oauth.Rmd
+++ b/vignettes/oauth.Rmd
@@ -1,5 +1,10 @@
 ---
 title: "OAuth"
+output: rmarkdown::html_vignette
+vignette: >
+  %\VignetteIndexEntry{oauth}
+  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEncoding{UTF-8}
 ---
 
 ```{r, include = FALSE}
