--- a/vignettes/articles/wrapping-apis.Rmd
+++ b/vignettes/articles/wrapping-apis.Rmd
@@ -507,7 +507,7 @@ set_api_key <- function(key = NULL) {
 }
 ```
 
-Using `rstudioapi` (or similar) here is good practice since you don't want to encourage the user to type their secret key into the console, as mentioned above.
+Using rstudioapi (or similar) here is good practice since you don't want to encourage the user to type their secret key into the console, as mentioned above.
 
 It's a good idea to extend `get_api_key()` to automatically use your encrypted key to make it easier to write tests:
 
