Conditionally purl code
Needed for old rel

--- a/vignettes/httr2.Rmd
+++ b/vignettes/httr2.Rmd
@@ -14,7 +14,8 @@ run_code <- getRversion() >= "4.4.0"
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
-  eval = run_code
+  eval = run_code,
+  purl = run_code
 )
 ```
 
