Fix links to jsonlite and curl.

--- a/README.Rmd
+++ b/README.Rmd
@@ -104,5 +104,5 @@ resp |> resp_body_html()
 
 ## Acknowledgements
 
-httr2 wouldn't be possible without [curl](https://jeroen.cran.dev/curl/), [openssl](https://github.com/jeroen/openssl/), [jsonlite](https://jeroen.cran.dev/jsonlite/), and [jose](https://github.com/r-lib/jose/), which are all maintained by [Jeroen Ooms](https://github.com/jeroen).
+httr2 wouldn't be possible without [curl](https://cran.dev/curl/), [openssl](https://cran.dev/openssl/), [jsonlite](https://cran.dev/jsonlite/), and [jose](https://github.com/r-lib/jose/), which are all maintained by [Jeroen Ooms](https://github.com/jeroen).
 A big thanks also go to [Jenny Bryan](https://jennybryan.org) and [Craig Citro](https://www.craigcitro.org) who have given me much useful feedback on both the design of the internals and the user facing API.
