--- a/vignettes/httr2.Rmd
+++ b/vignettes/httr2.Rmd
@@ -187,7 +187,7 @@ request(example_url()) |>
 ```
 
 This is another important difference to httr, which required that you explicitly call `httr::stop_for_status()` to turn HTTP errors into R errors.
-You can revert to the httr behaviour with `req_error(req, is_error = ~ FALSE)`.
+You can revert to the httr behaviour with `req_error(req, is_error = \(resp) FALSE)`.
 
 ## Control the request process
 
